🐝 fix: alignment problem on firefox. display: inline-blocks introduces line-height problems

--- a/src/components/Breadcrumb/style.styl
+++ b/src/components/Breadcrumb/style.styl
@@ -2,11 +2,10 @@
 
 .Breadcrumb
     &__title
-        display inline-block
         color cool-grey
 
     &__crumb
-        display inline-block
+        float left
 
     &__last &__title
         color black
